
Tue May  9 22:00:05 CEST 2000
(Christian)

I've implemented the window swapping feature recently
discussed on the list. There's a new action __A_SWAPMOVE
on ALT-SHIFT-Button1 that swaps windows that belong to a group.
Can be disabled in the global groups dialog. Play with it, it's fun :)

Also minor tweaks to the Ganymede Eterm theme.

-------------------------------------------------------------------------------

Sun May 28 11:48:09 PDT 2000
(KainX)

There's nothing illegal about base width/height being zero, so don't
force it to be no less than 1.

-------------------------------------------------------------------------------

Sun Jun  4 20:56:41 GMT 2000
(gilbertt)

Patch from monkeyiq@flashmail.com (real name?) for the option to position
windows centered under the mouse pointer.

(I changed the logic just slightly from the patch, so that windows too big
vertically are positioned so that the top is visible, instead of the other
way around).

-------------------------------------------------------------------------------

Thu Jul 20 16:14:29 PDT 2000
(KainX)

If GNOME-friendly E happens to be running in a non-GNOME environment, you
won't be able to exit E without eesh.  So now there are separate "Exit E" and
"Logout" options in the menu.

-------------------------------------------------------------------------------

Wed Jul 26 11:18:29 PDT 2000
(Mandrake)

apparently when you first open up the background settings dialog box it
clobbers the atom that says what the base background should have in it.
This is a hack, but fixes the symptom of the problem :)

-------------------------------------------------------------------------------

Wed Jul 26 11:54:23 PDT 2000
(Mandrake)

Same problem when you close the desktop background window

-------------------------------------------------------------------------------

Fri Jul 28 10:42:05 PDT 2000
(Mandrake)

the beginning of another xinerama feature "place additional windows on extra
head when current head is full"