@@ -506,8 +506,7 @@ HandleMotion(XEvent * ev)
 								      [i]->reqx,
 								      gwins
 								      [i]->x,
-								      mode.
-								      edge_snap_dist)))))))
+								      mode.edge_snap_dist)))))))
 		       {
 			  jumpx = 1;
 			  ndx = gwins[i]->reqx - gwins[i]->x + dx;
@@ -533,8 +532,7 @@ HandleMotion(XEvent * ev)
 								      [i]->reqy,
 								      gwins
 								      [i]->y,
-								      mode.
-								      edge_snap_dist)))))))
+								      mode.edge_snap_dist)))))))
 		       {
 			  jumpy = 1;
 			  ndy = gwins[i]->reqy - gwins[i]->y + dy;
@@ -1130,8 +1128,8 @@ HandleMotion(XEvent * ev)
 			  di->item.slider.wanted_val += dy;
 			  di->item.slider.val =
 			     di->item.slider.lower +
-			     ((((di->
-				 item.slider.base_h - di->item.slider.knob_h -
+			     ((((di->item.
+				 slider.base_h - di->item.slider.knob_h -
 				 di->item.slider.wanted_val) *
 				(di->item.slider.upper -
 				 di->item.slider.lower)) /
@@ -2645,8 +2643,7 @@ HandleMouseUp(XEvent * ev)
 			   (!((p->hi_ewin->ibox) || ((ewin->client.need_input)
 						     && ((ewin->skiptask)
 							 ||
-							 (ewin->
-							  skipwinlist))))))
+							 (ewin->skipwinlist))))))
 		    {
 		       char                was_shaded;
 
@@ -2672,13 +2669,13 @@ HandleMouseUp(XEvent * ev)
 				 MoveEwin(gwins[i],
 					  gwin_px[i] +
 					  ((desks.desk
-					    [gwins[i]->desktop].
-					    current_area_x) -
+					    [gwins[i]->
+					     desktop].current_area_x) -
 					   p->hi_ewin->area_x) * root.w,
 					  gwin_py[i] +
-					  ((desks.
-					    desk[gwins[i]->desktop].
-					    current_area_y) -
+					  ((desks.desk
+					    [gwins[i]->
+					     desktop].current_area_y) -
 					   p->hi_ewin->area_y) * root.h);
 				 if (was_shaded != gwins[i]->shaded)
 				    InstantShadeEwin(gwins[i]);
