@@ -680,8 +680,8 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					    ic->norm.normal->im->rgb_height);
 			       PastePixmap(disp, tt->win,
 					   Imlib_copy_image(id,
-							    ic->norm.normal->
-							    im),
+							    ic->norm.
+							    normal->im),
 					   Imlib_copy_mask(id,
 							   ic->norm.normal->im),
 					   x, y);
@@ -703,11 +703,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -723,11 +724,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -743,11 +745,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -763,11 +766,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -783,11 +787,12 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 					       ic->norm.normal->im->rgb_height);
 				  PastePixmap(disp, tt->win,
 					      Imlib_copy_image(id,
-							       ic->norm.normal->
-							       im),
+							       ic->norm.
+							       normal->im),
 					      Imlib_copy_mask(id,
-							      ic->norm.normal->
-							      im), x, y);
+							      ic->norm.
+							      normal->im), x,
+					      y);
 				  x += ic->norm.normal->im->rgb_width;
 			       }
 			  break;
@@ -807,16 +812,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -830,16 +836,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -853,16 +860,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -876,16 +884,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -899,16 +908,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -922,16 +932,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -945,16 +956,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
@@ -968,16 +980,17 @@ ShowToolTip(ToolTip * tt, char *text, ActionClass * ac, int x, int y)
 				 {
 				    Imlib_render(id, ic->norm.normal->im,
 						 ic->norm.normal->im->rgb_width,
-						 ic->norm.normal->im->
-						 rgb_height);
+						 ic->norm.normal->
+						 im->rgb_height);
 				    PastePixmap(disp, tt->win,
 						Imlib_copy_image(id,
-								 ic->norm.
-								 normal->im),
+								 ic->
+								 norm.normal->
+								 im),
 						Imlib_copy_mask(id,
-								ic->norm.
-								normal->im), x,
-						y);
+								ic->
+								norm.normal->
+								im), x, y);
 				    x += ic->norm.normal->im->rgb_width;
 				 }
 			 }
